// Vitest Snapshot v1

exports[`getRoutes > express > Express Routes 1`] = `
[
  {
    "file": "unknown",
    "method": "GET",
    "path": "/",
    "tags": [],
  },
  {
    "file": "unknown",
    "method": "GET",
    "path": "/activity",
    "tags": [],
  },
  {
    "file": "unknown",
    "method": "GET",
    "path": "/activity/:id",
    "tags": [],
  },
  {
    "file": "unknown",
    "method": "GET",
    "path": "/users",
    "tags": [],
  },
  {
    "file": "unknown",
    "method": "GET",
    "path": "/users/:id",
    "tags": [],
  },
  {
    "file": "unknown",
    "method": "PUT",
    "path": "/users/:id",
    "tags": [],
  },
  {
    "file": "unknown",
    "method": "GET",
    "path": "/users/following",
    "tags": [],
  },
]
`;

exports[`getRoutes > fastify > Fastify Routes 1`] = `
[
  {
    "file": "unknown",
    "method": "GET",
    "path": "/",
    "tags": [],
  },
  {
    "file": "unknown",
    "method": "HEAD",
    "path": "/",
    "tags": [],
  },
  {
    "file": "unknown",
    "method": "GET",
    "path": "/activity",
    "tags": [],
  },
  {
    "file": "unknown",
    "method": "HEAD",
    "path": "/activity",
    "tags": [],
  },
  {
    "file": "unknown",
    "method": "GET",
    "path": "/activity/:id",
    "tags": [],
  },
  {
    "file": "unknown",
    "method": "HEAD",
    "path": "/activity/:id",
    "tags": [],
  },
  {
    "file": "unknown",
    "method": "GET",
    "path": "/users",
    "tags": [],
  },
  {
    "file": "unknown",
    "method": "HEAD",
    "path": "/users",
    "tags": [],
  },
  {
    "file": "unknown",
    "method": "GET",
    "path": "/users/:id",
    "tags": [],
  },
  {
    "file": "unknown",
    "method": "HEAD",
    "path": "/users/:id",
    "tags": [],
  },
  {
    "file": "unknown",
    "method": "PUT",
    "path": "/users/:id",
    "tags": [],
  },
  {
    "file": "unknown",
    "method": "GET",
    "path": "/users/following",
    "tags": [],
  },
]
`;

exports[`getRoutes > hapi > Hapi Routes 1`] = `
[
  {
    "file": "unknown",
    "method": "GET",
    "path": "/activity",
    "tags": [],
  },
  {
    "file": "unknown",
    "method": "GET",
    "path": "/users",
    "tags": [],
  },
  {
    "file": "unknown",
    "method": "GET",
    "path": "/",
    "tags": [],
  },
  {
    "file": "unknown",
    "method": "GET",
    "path": "/activity/:id",
    "tags": [],
  },
  {
    "file": "unknown",
    "method": "GET",
    "path": "/users/:id",
    "tags": [],
  },
  {
    "file": "unknown",
    "method": "GET",
    "path": "/users/following",
    "tags": [],
  },
  {
    "file": "unknown",
    "method": "PUT",
    "path": "/users/:id",
    "tags": [],
  },
]
`;

exports[`getRoutes > koa > Koa Routes 1`] = `
[
  {
    "file": "unknown",
    "method": "HEAD|GET",
    "path": "/",
    "tags": [],
  },
  {
    "file": "unknown",
    "method": "HEAD|GET",
    "path": "/activity",
    "tags": [],
  },
  {
    "file": "unknown",
    "method": "HEAD|GET",
    "path": "/activity/:id",
    "tags": [],
  },
  {
    "file": "unknown",
    "method": "HEAD|GET",
    "path": "/users",
    "tags": [],
  },
  {
    "file": "unknown",
    "method": "HEAD|GET",
    "path": "/users/:id",
    "tags": [],
  },
  {
    "file": "unknown",
    "method": "PUT",
    "path": "/users/:id",
    "tags": [],
  },
  {
    "file": "unknown",
    "method": "HEAD|GET",
    "path": "/users/following",
    "tags": [],
  },
]
`;
